[workspace.package]
edition = "2021"
authors = ["Will Hopkins <willothyh@gmail.com>"]
description = "A modern terminal workspace and multiplexer"
repository = "https://github.com/willothy/rx"
license = "MIT"
readme = "README.md"

[workspace]
members = ["client", "server"]
default-members = ["client"]

[workspace.dependencies]
termwiz = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
anyhow = "1.0.72"
