[workspace.package]
edition = "2021"
authors = ["Will Hopkins <willothyh@gmail.com>"]
description = "A modern terminal workspace and multiplexer"
repository = "https://github.com/willothy/rx"
license = "MIT"
readme = "README.md"

[workspace]
members = ["client", "server", "proto"]
default-members = ["client"]
build = "build.rs"

[workspace.dependencies]
termwiz = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
anyhow = "1.0.72"
prost = "0.11.9"
tonic = "0.9.2"
tonic-build = { version = "0.9.2" }
rx-proto = { path = "proto" }
