[package]
name = "overlord-server"
version = "0.1.0"
edition = "2021"
default-run = "rx-server"

[[bin]]
name = "overlord"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
termwiz = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
rx-proto = { workspace = true }
dirs = { workspace = true }
dashmap = { workspace = true }
crossbeam-queue = { workspace = true }
