[package]
name = "overlord-server"
version = "0.1.0"
edition = "2021"
default-run = "overlord"

[[bin]]
name = "overlord"
path = "src/main.rs"

[dependencies]
overlord-proto = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
termwiz = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
dirs = { workspace = true }
dashmap = { workspace = true }
crossbeam-queue = { workspace = true }
